--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "license": "ISC",
   "description": "",
   "devDependencies": {
+    "prettier": "2.3.0",
     "webpack": "^5.37.0",
     "webpack-cli": "^4.7.0"
   }
